--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.2.3",
-    "babel-plugin-module-resolver": "^4.0.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
+    "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^6.7.2",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-import-resolver-babel-module": "^5.1.2",
-    "eslint-plugin-module-resolver": "^0.17.0",
     "eslint-config-prettier": "^6.7.0",
+    "eslint-import-resolver-babel-module": "^5.1.2",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-module-resolver": "^0.17.0",
     "eslint-plugin-prettier": "^3.1.1",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
@@ -45,6 +45,8 @@
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
+    "google-auth-library": "^6.1.3",
+    "googleapis": "^66.0.0",
     "lodash": "^4.17.15"
   }
 }
